# mcstas-time-of-flight-table

./: .gitignore  CMakeLists.txt  TableManager.comp  TableManager.comp.json  TableRecorder.comp  TableRecorder.comp.json  TableSetup.comp  TableSetup.comp.json  pooch-registry.txt  requirements.txt  tof-table-lib.c  tof-table-lib.h  tof_table.py
.github/workflows/: ctest.yml
test/: CMakeLists.txt  particle_stub.c  particle_stub.h  test_data.c  test_json.c  test_particle.c  test_state.c  test_tof_table.py
